--- a/blogPessoal/src/app/menu/menu.component.html
+++ b/blogPessoal/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
-            <img src="https://imgur.com/a/gbxpbsk" alt="Imagem do user" height="50px" width="50px"  class="img-fluid rounded-circle"  >
+            <img src="https://imgur.com/a/gbxpbsk.jpg" alt="Imagem do user" height="50px" width="50px"  class="img-fluid rounded-circle"  >
         </li>
         <li class="nav-item pl-3">
           <p class="m-0 font-weight-bold text-white fs-16">Nome Do Usuario</p>
